fixed filter on mobile

--- a/src/less/_filter.less
+++ b/src/less/_filter.less
@@ -154,6 +154,10 @@
 	.filter-destination {
 		width: auto;
 	}
+
+	.filter-type-big {
+		height: auto;
+	}
 }
 
 .smaller-device() {
